Implement payment
